[package]
name = "luminar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
text-colorizer = "1"
dotenv = "0.15.0"
poise = "0.5.2"

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]
