[package]
name = "luminar"
authors = ["Yuki."]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
text-colorizer = "1"
dotenv = "0.15.0"
serenity = {version="0.11.5", default-features=false, features=["client", "gateway", "rustls_backend", "model"]}
mongodb = "2.3.1"
serde = {version="1.0.152", features=["derive"]}

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "develop"
